--- a/ensyuumondai.html
+++ b/ensyuumondai.html
@@ -6,4 +6,16 @@
   <link rel="stylesheet" href="ensyuumondai.css">
   <title>1-6演習問題</title>
 </head>
+
+<body>
+
+  <div class="box1"></div>
+
+  <div class="box2"></div>
+
+  <div class="box3"></div>
+
+  <div class="box4"></div>
+
+</body>
 </html>
